--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,9 @@ browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+debug.url=DEFAULT_URL
+hostname=localhost
 index.file=index.php
+port=8000
 run.as=LOCAL
-url=http://localhost/labdados
+url=http://localhost/labdados/
